--- a/absolute.html
+++ b/absolute.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Вторая лаба</title>
+    <title>NO FLEX NO GRID</title>
     <link rel="stylesheet" type="text/css" href="absolute.css">
 </head>
 <body>
